<resources>
    <string name="app_name">PawSense</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="delete_profile_dialog_title">Delete Profile</string>
    <string name="delete_profile_dialog_message">This action cannot be undone</string>
    <string name="delete_profile_dialog_positive_button">Delete</string>
    <string name="delete_profile_dialog_negative_button">Cancel</string>

    <string name="teit_error_text">This field is mandatory</string>
    <string name="no_profiles">No Profiles</string>
    <string name="add_a_profile_and_it_will_appear_here">Add a profile and it will appear here</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="help_activity_action_bar_title">Help</string>
    <string name="send_feedback">Send Feedback</string>

    <string name="update_app_informative_text">A new version is available</string>
    <string name="update_app_button_text">UPDATE</string>
    <string name="new_profile">New Profile</string>
    <string name="save">SAVE</string>
    <string name="name_stng">Name</string>

    <string name="weight">Weight</string>
    <string name="breed">Breed</string>
    <string name="gender">Gender</string>
    <string name="birth_day">Birth Day</string>
    <string name="help">Help</string>
    <string name="share_app">Share App</string>

    <string name="edit_profile_details">Edit Profile Details</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="fml">Female</string>
    <string name="yrs">Yrs</string>
    <string name="jan">January</string>

    <string name="feb">February</string>
    <string name="mrch">March</string>
    <string name="aprl">April</string>
    <string name="my">May</string>
    <string name="jne">June</string>

    <string name="jly">July</string>
    <string name="agst">August</string>
    <string name="sptmb">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>

    <string name="dec">December</string>
    <string name="mle">Male</string>
    <string name="klgrms">Kgs</string>
    <string name="i_b_dte">Input BirthDate</string>
    <string name="prfle_updtd">Profile Updated</string>

    <string name="slct_p_pic">Select a profile picture</string>
    <string name="slct_p_picc">Select Profile Picture</string>
    <string name="prfl_pc_pdtd">Profile Picture Updated</string>
    <string name="p_pic_slctd">Profile picture selected</string>
    <string name="prm_msg_txt">Pet Manager is a fast and simple app that enables me to store basic information about my pets for free. Get it at: https://play.google.com/store/apps/details?id=</string>
    <string name="sr_va">Share via</string>

    <string name="speed_o_title">Quickly store pet data</string>
    <string name="speed_o_text">Keep and access information fast</string>
    <string name="safety_o_title">Save your data reliably and securely</string>
    <string name="safety_o_text">Your input is stored safely</string>
    <string name="get_started">GET STARTED</string>




    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>


</resources>
