<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="?attr/selectableItemBackgroundBorderless">

            <ImageButton
                android:id="@+id/button_close"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="@android:color/white"
                app:srcCompat="@drawable/ic_action_close" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/np_title_tvw"
                android:gravity="center_vertical"
                android:text="@string/new_profile"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/npd_save_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="@string/save"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:scrollingCache="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:id="@+id/pname_til"
                android:hint="@string/name_stng"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundColor="#FFFFFF"
                app:boxStrokeColor="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pname_tiet"
                    android:inputType="text"
                    android:textColor="#2D3436"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:id="@+id/pweight_til"
                android:hint="@string/weight"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundColor="#FFFFFF"
                app:boxStrokeColor="@color/colorPrimary"
                app:suffixText="Kgs"> <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pweight_tiet"
                android:inputType="number"
                android:textColor="#2D3436"
                android:textSize="16sp" /> </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:hint="@string/gender"
                android:orientation="horizontal"
                app:boxBackgroundColor="#FFFFFF"
                app:boxStrokeColor="@color/colorPrimary">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/gender_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#2D3436"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:id="@+id/pbreed_til"
                android:hint="@string/breed"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundColor="#FFFFFF"
                app:boxStrokeColor="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pbreed_tiet"
                    android:inputType="text"
                    android:textColor="#2D3436"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:gravity="center"
                android:id="@+id/new_profile_birthday_layout"
                android:background="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true"
                android:weightSum="100">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:orientation="horizontal"
                    android:paddingEnd="16dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:layout_weight="95"
                    android:gravity="center"
                    android:weightSum="100">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/npbl_date_label_tvw"
                        android:textColor="#2D3436"
                        android:textSize="16sp"
                        android:gravity="start"
                        android:layout_weight="65"
                        android:text="@string/birth_day"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/npbl_date_value_tvw"
                        android:gravity="end"
                        android:layout_weight="35"
                        android:textColor="#424242"
                        android:textSize="16sp"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:id="@+id/npbl_icon"
                    android:src="@drawable/ic_action_open" />

            </LinearLayout>

            <view
                class="android.view.View"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E0E0E0" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>